tests/neg-macros/i7013.scala
import quoted._

def foo(using s: Scope)(): Any = {
  class C
  '[C] // error
}
